# steer_bot

steer_bot_bringup/: CMakeLists.txt  package.xml
steer_bot_bringup/launch/: steer_bot_gazebo.launch  steer_bot_navigation.launch
steer_bot_control/config/: ctrl_ackermann_steering_controller.yaml
steer_bot_description/urdf/: steer_bot.urdf.xacro
steer_bot_gazebo/launch/: steer_bot_sim.launch  teleop.launch
steer_bot_gazebo/scripts/: ackermann_teleop
steer_bot_navigation/: CMakeLists.txt  package.xml
steer_bot_navigation/config/robot_localization/: robot_localization.yaml  test.yaml
steer_bot_navigation/config/slam_toolbox/: mapper_localization_mode.yaml  mapper_online_sync.yaml
steer_bot_navigation/launch/: amcl.launch  gmapping.launch  move_base.launch  steer_bot_localization.launch  steer_bot_navigation.launch
steer_bot_navigation/maps/: mymap.pgm  mymap.yaml
steer_bot_navigation/scripts/: ackermann_teleop
steer_bot_viz/rviz/: steer_bot_gmapping.rviz  steer_bot_navigation.rviz
